# chokepoint-research-agent

./: .env.example  .gitignore  .mailmap  AGENTS.md  AUTHORS.md  CHANGELOG.md  CHANGELOG.md.tmp  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: AUTONOMOUS_LOG.md  AUTONOMOUS_SETUP.md  FREEZE.md  ITERATION_20_ROUNDS.md  ITERATION_LOG.md  LIVE_AND_UI_SMOKE.md  PLUGIN_MARKETPLACE.md  PLUGIN_SDK.md  PROFESSIONAL_WORKSTATION.md  PROVIDERS.md  README.md  RELEASE_NOTES_0.10.md  RELEASE_NOTES_1.0.md  RELEASE_NOTES_10.0.md  RELEASE_NOTES_2.0.md  RELEASE_NOTES_2.5.md  RELEASE_NOTES_3.0.md  RELEASE_NOTES_4.0.md  RELEASE_NOTES_4.1.md  RELEASE_NOTES_4.2.md  RELEASE_NOTES_4.3.md  RELEASE_NOTES_4.4.md  RELEASE_NOTES_4.5.md  RELEASE_NOTES_4.6.md  RELEASE_NOTES_4.7.md  RELEASE_NOTES_5.0.md  RELEASE_NOTES_5.1.md  RELEASE_NOTES_6.0.md  RELEASE_NOTES_6.1.md  RELEASE_NOTES_6.2.md  RELEASE_NOTES_6.3.md  RELEASE_NOTES_7.0.md  RELEASE_NOTES_8.0.md  RELEASE_NOTES_8.1.md  RELEASE_NOTES_8.2.md  RELEASE_NOTES_8.3.md  RELEASE_NOTES_8.4.md  RELEASE_NOTES_8.5.md  RELEASE_NOTES_8.6.md  REMOTE_PLUGIN_DESIGN.md  (+9 more)
examples/: sample_questions.md  sample_questions.zh.md
knowledge/: chokepoint_theory_bruceblue.md
plugins/: example_provider.py
reports/: SAMPLE_REPORT_FORMAT.md
scripts/: autonomous_overnight.sh  capture_readme_screenshots.py  live_smoke.py  run_scheduled_brief.py  run_scheduled_queue.py  smoke_check.py  ui_smoke.py
src/: __init__.py  api.py  api_middleware.py  config.py  logging_utils.py
tests/: test_analysis_playbooks.py  test_config_and_reports.py  test_knowledge.py  test_market_snapshot.py  test_ops_v08_v10.py  test_pro_train_50.py  test_prompts.py  test_providers_jobs.py  test_questionnaires_rubrics.py  test_scorecard.py  test_v03_v07.py  test_v11_v20.py  test_v2.py  test_v21_v25.py  test_v3_pipeline.py  test_v41_ops.py  test_v42_maps.py  test_v43_queue_index.py  test_v44_worker.py  test_v45_digest.py  test_v46_checklist.py  test_v47_marketplace.py  test_v4_ops.py  test_v50_pro.py  (+11 more)
(+696 files in other folders)
