[project]
name = "chokepoint-research-agent"
version = "2.0.0"
description = "Multi-agent investment research agent powered by Chokepoint Theory (bottom-up supply-chain reverse engineering)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BruceLanLan" },
]
keywords = [
  "ai-agent",
  "investment-research",
  "deep-agents",
  "chokepoint",
  "supply-chain",
  "multi-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "deepagents>=0.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.3.0",
  "tavily-python>=0.5.0",
  "httpx[socks]>=0.27.0",
  "socksio>=1.0.0",
  "markdownify>=0.13.0",
  "yfinance>=0.2.40",
  "pandas>=2.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.0.0",
  "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/BruceLanLan/chokepoint-research-agent"
Repository = "https://github.com/BruceLanLan/chokepoint-research-agent"
Issues = "https://github.com/BruceLanLan/chokepoint-research-agent/issues"
Documentation = "https://github.com/BruceLanLan/chokepoint-research-agent/tree/main/docs"

[project.scripts]
chokepoint-agent = "main:app"
invest-agent = "main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
